# ChangeLog for net-im/psi-screenshot
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Dec 2010; Nikoli <nikoli@lavabit.com>
  +psi-screenshot-0.4.4_pre3304.ebuild:
  version bump

  21 Oct 2010; Nikoli <nikoli@lavabit.com>
  +psi-screenshot-0.4.3_pre3076.ebuild:
  version bump

  07 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> ChangeLog:
  create ChangeLog
