@@ -1,7 +1,9 @@
 DIST psi-screenshot-0.4.3_pre3076.tar.xz 18104 RMD160 4e1c0fa7359bb5ae2daeeb136eff357bd63e2ebc SHA1 77ef34bec3a6f9923a3528d6bbf23d74307ec1f6 SHA256 651045a54e3f9f2f0ae9fd6c42d05d7652a57304a4e694992168625ff3b4cdc9
 DIST psi-screenshot-0.4.4_pre3304.tar.xz 18364 RMD160 fb53d4e7574bb08369920f749f67ebe08b5777bd SHA1 2a7090c182e505bc047dcbc5f251131fed167765 SHA256 d9e24929d3ec482e5784d3446af25594f30707c9bf5f8724b4159e31e840f477
+DIST psi-screenshot-0.4.4_pre3481.tar.xz 18408 RMD160 321ac56e606647ec83b11278663601a2d70cffb6 SHA1 8a877a9ef58f8834da8d7a66fcb04f3b79853fb6 SHA256 0693bc29daf50ab748181d9078815a940b632b266da555adeaef4345b809c651
 EBUILD psi-screenshot-0.4.3_pre3076.ebuild 238 RMD160 22037d8e2fb4e99b13d3f87a979681af6fe9cfcd SHA1 f57648951b242d1babdd06e3b0ce595ac68a4eb6 SHA256 e3991c11d4ea4e01df1f718e74813f3bd0b82f23bcbc955110d6445999ab4701
 EBUILD psi-screenshot-0.4.4_pre3304.ebuild 238 RMD160 22037d8e2fb4e99b13d3f87a979681af6fe9cfcd SHA1 f57648951b242d1babdd06e3b0ce595ac68a4eb6 SHA256 e3991c11d4ea4e01df1f718e74813f3bd0b82f23bcbc955110d6445999ab4701
+EBUILD psi-screenshot-0.4.4_pre3481.ebuild 238 RMD160 61442b31c65a195747b4f47b874a900468ed2200 SHA1 48494e1f9967245f96c1f8c234c2dbeedeecf9cb SHA256 a8cc0202a69a8f23ddc7173ae3ca4735ef43c13d6546286a4e4b2c27696f2e88
 EBUILD psi-screenshot-9999.ebuild 229 RMD160 f99feec2af5326475c5285644da5d07494307bd6 SHA1 2dc49678212c952d359b0cd0abf160cee42a94dd SHA256 81afeae7bf9ea19f6e5f8bae8239e53c3df0c619e2e062ad39f261166186c985
-MISC ChangeLog 404 RMD160 36658ffb4daac3a6a817ac4492e1300c8bde8851 SHA1 97e5a68f7cb6e84feac9a9a233d2f2f9fe1ccdd9 SHA256 4b09e9148b80bc5edd0159096ece7df215c49be079c3d9a34fbb18b66fd8c37e
+MISC ChangeLog 503 RMD160 5d1308a10aaa88a3e9d970f1e258821c380c76ef SHA1 8a5322829a61504733eb386df7b20e0063bd6b2d SHA256 bf7af45a4673a3c2e518f884b9e2570f4cbd336b1b835b48e0453669837db60f
 MISC metadata.xml 390 RMD160 48ef6630d89cf8ac69817ce7551fcd58716889ac SHA1 dffcae5ad216b4084033cf87d2e6f0c9667c0af2 SHA256 e4fe22d375199d50072c8781307abc7e9c98f71333b9d78bccd315ed94d32e05
